# docs/swagger.json
@@ -54,7 +54,13 @@
         "models.ExamDetails": {
             "type": "object",
             "properties": {
-                "exam_code": {
+                "academic_year": {
+                    "type": "string"
+                },
+                "college_name": {
+                    "type": "string"
+                },
+                "department_name": {
                     "type": "string"
                 },
                 "exam_date": {
@@ -72,9 +78,6 @@
                         "type": "string"
                     }
                 },
-                "exam_name": {
-                    "type": "string"
-                },
                 "exam_session": {
                     "type": "string"
                 },
@@ -82,6 +85,18 @@
                     "type": "string"
                 },
                 "exam_total_marks": {
+                    "type": "string"
+                },
+                "examination_name": {
+                    "type": "string"
+                },
+                "semester": {
+                    "type": "string"
+                },
+                "subject_code": {
+                    "type": "string"
+                },
+                "subject_name": {
                     "type": "string"
                 }
             }
@@ -94,6 +109,12 @@
                 },
                 "number_of_sets": {
                     "type": "integer"
+                },
+                "q_paper_codes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "questions_by_type": {
                     "type": "array",
